change view chat section & fix some bug on chat (view) & add listener for read-message & add rest api GET ../chat/:id/messages
